--- a/coffee_project/src/main/resources/templates/user/update.html
+++ b/coffee_project/src/main/resources/templates/user/update.html
@@ -2,12 +2,16 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Sửa thông tin</title>
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css">
     <style th:insert="/layout::style"></style>
+    <script src="/js/jquery-3.7.0.min.js"></script>
+
     <!--                    //File css Img-->
     <style>
         td {
-            padding-right: 35px;
+            padding-right: 30px;
         }
 
         #dnd {
@@ -21,21 +25,33 @@
             width: 200px;
         }
 
-        .drag-over {
-            border-color: red !important;
-            color: red;
-        }
 
         .preview-img {
             width: 100%;
             height: 100%;
-            /*margin: 0 1em 1em 0;*/
             padding: 0.5em;
-            /*border: 1px solid #ccc;*/
-            /*border-radius: 3px;*/
-
             display: inline-block;
         }
+
+        #form-create {
+            padding-left: 4rem;
+        }
+
+        #form-create .form-check-input {
+            width: 16px;
+            height: 16px;
+        }
+
+        #form-create input,
+        #form-create select {
+            width: 350px;
+            margin-left: 20px;
+        }
+
+        small {
+            margin-left: 20px;
+        }
+
     </style>
     <link rel="stylesheet" th:href="@{/bootstrap-5.0.2-dist/css/bootstrap.css}"
           href="../static/bootstrap-5.0.2-dist/css/bootstrap.css">
@@ -49,101 +65,166 @@
 
 
             <!-------------------------CODE--------------------------------------------------------------------------------->
-            <h1 style="text-align: center; margin-bottom: 20px">Thay đổi thông tin nhân viên</h1>
-            <form th:object="${userDto}" method="post" th:action="@{/user/create}">
+
+            <div class="row" style="margin-top: 15px;margin-bottom: 20px">
+                <h1 class="col-10" style="text-align: center">Thay Đổi Thông Tin Nhân Viên</h1>
+
+                <a th:href="@{/user/list}" style="text-decoration: none"
+                   class="col-2 d-flex justify-content-center">
+                    <button class="btn btn-primary "><i class="fa-solid fa-circle-arrow-left"></i></button>
+                </a>
+
+            </div>
+            <form th:object="${userDto}" method="post" th:action="@{/user/update}">
 
                 <!--------------//Drag and Drop---------------------------------------------------------->
 
                 <div class="row d-flex ">
                     <div class="col-4">
-                        <div id="dnd" class="preview" style="margin-top: 15px">
-                            <img style="margin-left: 40px">Thả ảnh vào đây
+                        <div id="dnd" class="preview" style="margin-top: 5px">
 
                         </div>
-
-                        <a th:href="@{/user/list}" style="text-decoration: none;margin-top: 35px" class="btn btn-primary">Quay lại</a>
-
-                        <!--                    //Table đăng kí thông tin-->
+                        <div class="d-flex justify-content-center">
+                            <div>
+                                <div>Thả ảnh 4x6 vào đây</div>
+                                <progress id="uploader" style="width: 100%" value="0" max="100">0%</progress>
+                            </div>
+                        </div>
                     </div>
-                    <div class="col-8">
-                        <table class="table-responsive">
+                        <!--                    //Table đăng kí thông tin-->
+
+                    <div class="col-8" id="form-create">
+                        <table class="table-responsive" style="width: 70%">
 
                             <tr>
-                                <th>Tên nhân viên<span style="color: red">*</span></th>
-                                <td><input class="form-control" th:field="*{userName}"
-                                           th:value="${userDto.userName}"></td>
-                                <td style="color: red" th:if="${#fields.hasErrors('userName')}"
-                                    th:errors="*{userName}"></td>
-                            </tr>
-                            <tr>
-                                <th>Giới tính<span style="color: red">*</span></th>
-                                <td><input class="form-check-input" type="radio" name="gender" th:field="*{userGender}"
-                                           th:value="true"><span>Nam</span>
-                                    <input class="form-check-input" type="radio" name="gender" th:field="*{userGender}"
-                                           th:value="false"><span>Nữ</span>
-                                    <input class="form-check-input" type="radio" name="gender" th:field="*{userGender}"
-                                           th:value="null"><span>Khác</span>
-                                </td>
-                                <td style="color: red" th:if="${#fields.hasErrors('userGender')}"
-                                    th:errors="*{userGender}"></td>
-                            </tr>
-                            <tr>
-                                <th>Ngày sinh<span style="color: red">*</span></th>
-                                <td><input class="form-control" type="date" th:field="*{userBirthday}"></td>
-                                <td style="color: red" th:if="${#fields.hasErrors('userBirthday')}"
-                                    th:errors="*{userBirthday}"></td>
-                            </tr>
-                            <tr>
-                                <th>Số điện thoại<span style="color: red">*</span></th>
-                                <td><input class="form-control" th:field="*{userPhoneNumber}"></td>
-                                <td style="color: red" th:if="${#fields.hasErrors('userPhoneNumber')}"
-                                    th:errors="*{userPhoneNumber}"></td>
-                            </tr>
-                            <tr>
-                                <th>Mail<span style="color: red">*</span>:</th>
-                                <td><input class="form-control" th:field="*{userEmail}"></td>
-                                <td style="color: red" th:if="${#fields.hasErrors('userEmail')}"
-                                    th:errors="*{userEmail}"></td>
-                            </tr>
-                            <tr>
-                                <th>Căn cước công dân<span style="color: red">*</span></th>
-                                <td><input class="form-control" th:field="*{userIdCard}"></td>
-                                <td style="color: red" th:if="${#fields.hasErrors('userIdCard')}"
-                                    th:errors="*{userIdCard}"></td>
-                            </tr>
-                            <tr>
-                                <th>Lương<span style="color: red">*</span></th>
-                                <td><input class="form-control" th:field="*{userSalary}" type="number"></td>
-                                <td style="color: red" th:if="${#fields.hasErrors('userSalary')}"
-                                    th:errors="*{userSalary}"></td>
-                            </tr>
-                            <tr>
-                                <th>Địa chỉ<span style="color: red">*</span></th>
-                                <td><input class="form-control" id="a" th:field="*{userAddress}"></td>
-                                <td style="color: red" th:if="${#fields.hasErrors('userAddress')}"
-                                    th:errors="*{userAddress}"></td>
-                            </tr>
-                            <tr>
-                                <th>Ca làm việc<span style="color: red">*</span></th>
-                                <td><select class="form-select" th:field="*{employeeType}">
-                                    <option  th:each="employeeType :${employeeTypeList}"
-                                            th:value="${employeeType.employeeTypeId}"
-                                            th:text="${employeeType.employeeTypeName}"></option>
-                                </select></td>
-                            </tr>
-                            <tr>
-                                <th>Tài khoản đăng kí<span style="color: red">*</span></th>
-                                <td><input class="form-control" th:field="*{account.accountName}"></td>
-                            </tr>
-                            <tr>
-
-                                <td><a th:href="@{/user/list}">
-                                    <button class="btn btn-danger" type="reset">Xoá thông tin</button>
-
-                                </a></td>
+                                <th>Tên nhân viên<span style="color: red">*</span>
+                                    <div style=" height: 20px"></div>
+                                </th>
                                 <td>
-                                    <button style="margin-left: 60px" class="btn btn-primary">Đăng kí</button>
+                                    <input class="form-control" th:field="*{userName}"
+                                           th:value="${userDto.userName}">
+                                    <div style=" height: 20px"><small style="color: red"
+                                                                      th:if="${#fields.hasErrors('userName')}"
+                                                                      th:errors="*{userName}"></small>
+                                    </div>
                                 </td>
+                            </tr>
+
+                            <tr>
+                                <th>Giới tính<span style="color: red">*</span>
+                                    <div style=" height: 20px"></div>
+                                </th>
+                                <td>
+                                    <input class="form-check-input" type="radio" name="gender" th:field="*{userGender}"
+                                           th:value="true">&nbsp;<span>Nam</span>
+                                    <input class="form-check-input" type="radio" name="gender" th:field="*{userGender}"
+                                           th:value="false">&nbsp;<span>Nữ</span>
+
+                                    <div style=" height: 20px">
+                                        <small style="color: red"
+                                               th:if="${#fields.hasErrors('userGender')}"
+                                               th:errors="*{userGender}">
+                                        </small>
+                                    </div>
+                                </td>
+                                </td>
+                            </tr>
+
+                            <tr>
+                                <th>Ngày sinh<span style="color: red">*</span>
+                                    <div style=" height: 20px"></div>
+                                </th>
+                                <td>
+                                    <input class="form-control" type="date" th:field="*{userBirthday}">
+                                    <div style=" height: 20px">
+                                        <small style="color: red" th:if="${#fields.hasErrors('userBirthday')}"
+                                               th:errors="*{userBirthday}">
+
+                                        </small>
+                                    </div>
+                                </td>
+                            </tr>
+
+                            <tr>
+                                <th>Điện thoại<span style="color: red">*</span>
+                                    <div style=" height: 20px"></div>
+                                </th>
+                                <td><input class="form-control " th:field="*{userPhoneNumber}">
+                                    <div style=" height: 20px">
+                                        <small style="color: red" th:if="${#fields.hasErrors('userPhoneNumber')}"
+                                               th:errors="*{userPhoneNumber}"></small>
+                                    </div>
+                                </td>
+                            </tr>
+                            <tr>
+                                <th>Mail<span style="color: red">*</span>
+                                    <div style=" height: 20px"></div>
+                                </th>
+                                <td>
+                                    <input class="form-control" th:field="*{userEmail}">
+                                    <div style=" height: 20px">
+                                        <small style="color: red" th:if="${#fields.hasErrors('userEmail')}"
+                                               th:errors="*{userEmail}"></small>
+                                    </div>
+                                </td>
+                            </tr>
+                            <tr>
+                                <th>Căn cước<span style="color: red">*</span>
+                                    <div style=" height: 20px"></div>
+                                </th>
+                                <td><input class="form-control" th:field="*{userIdCard}">
+                                    <div style=" height: 20px">
+                                        <small style="color: red" th:if="${#fields.hasErrors('userIdCard')}"
+                                               th:errors="*{userIdCard}"></small>
+                                    </div>
+                                </td>
+                            </tr>
+<!--                            <tr>-->
+<!--                                <th>Lương<span style="color: red">*</span>-->
+<!--                                    <div style=" height: 20px"></div>-->
+<!--                                </th>-->
+<!--                                <td>-->
+<!--                                    <input class="form-control" th:field="*{userSalary}" type="number"-->
+<!--                                           id="salary">-->
+<!--                                    <div style=" height: 20px">-->
+<!--                                        <small style="color: red" th:if="${#fields.hasErrors('userSalary')}"-->
+<!--                                               th:errors="*{userSalary}"></small>-->
+<!--                                    </div>-->
+<!--                                </td>-->
+<!--                            </tr>-->
+
+                            <tr>
+                                <th>Địa chỉ<span style="color: red">*</span>
+                                    <div style=" height: 20px"></div>
+                                </th>
+                                <td><input class="form-control" id="a" th:field="*{userAddress}">
+                                    <div style=" height: 20px">
+                                        <small style="color: red" th:if="${#fields.hasErrors('userAddress')}"
+                                               th:errors="*{userAddress}"></small>
+                                    </div>
+                                </td>
+                            </tr>
+
+<!--                            <tr>-->
+<!--                                <th>Ca làm việc<span style="color: red">*</span>-->
+<!--                                    <div style=" height: 20px"></div>-->
+<!--                                </th>-->
+<!--                                <td><select class="form-select" th:field="*{employeeType}">-->
+<!--                                    <option th:each="employeeType :${employeeTypeList}"-->
+<!--                                            th:value="${employeeType.employeeTypeId}"-->
+<!--                                            th:text="${employeeType.employeeTypeName}"></option>-->
+<!--                                </select>-->
+<!--                                    <div style=" height: 20px"></div>-->
+<!--                                </td>-->
+<!--                            </tr>-->
+                            <tr>
+
+                                <td colspan="2">
+                                    <button style="margin-top:20px; width: 100%" id="submit" class="btn btn-primary">
+                                        Sửa
+                                    </button>
+                                </td>
+
                             </tr>
                         </table>
                     </div>
@@ -163,7 +244,18 @@
 <script th:src="@{/bootstrap-5.0.2-dist/js/bootstrap.bundle.js}"
         src="../static/bootstrap-5.0.2-dist/js/bootstrap.bundle.js"></script>
 <!--                    //file Js Img-->
+<script src="https://www.gstatic.com/firebasejs/7.7.0/firebase-app.js"></script>
+<script src="https://www.gstatic.com/firebasejs/7.7.0/firebase-storage.js"></script>
+
+
 <script>
+    formatSalary()
+
+    function formatSalary() {
+        let salary = +document.getElementById("salary").value;
+        document.getElementById("salary").value = Math.round(salary);
+    }
+
     const dndElement = document.querySelector('#dnd')
     const resultElement = document.querySelector('.preview')
     const validImageTypes = ['image/gif', 'image/jpeg', 'image/png']
@@ -182,7 +274,7 @@
         e.preventDefault()
         this.classList.remove('drag-over')
         const files = e.dataTransfer.files;
-        for (var i = 0; i < files.length; i++) {
+        for (let i = 0; i < files.length; i++) {
             const file = files[i]
             renderPreviewImage(file)
         }
