--- a/coffee_project/src/main/resources/templates/customer/edit.html
+++ b/coffee_project/src/main/resources/templates/customer/edit.html
@@ -7,6 +7,9 @@
   <link rel="stylesheet" th:href="@{/bootstrap-5.0.2-dist/css/bootstrap.css}"
         href="../static/bootstrap-5.0.2-dist/css/bootstrap.css">
   <style>
+    body {
+      font-family: "Source Code Pro";
+    }
     .form {
       width: 70%;
       position: relative;
@@ -24,11 +27,11 @@
       <div class="form">
         <form class="form-group" th:action="@{/customer/update}" th:object="${customer}" method="post">
           <fieldset>
-            <legend style="text-align: center"><h2>Chỉnh sửa thông tin khách hàng</h2></legend>
+            <legend style="text-align: center"><h1><b>Chỉnh sửa thông tin khách hàng</b></h1></legend>
             <div class="table">
               <table class="table table-hover">
                 <tr>
-                  <td>#</td>
+                  <td></td>
                   <td>
                     <input class="form-control" type="hidden" th:field="*{customerId}"/>
                   </td>
@@ -56,12 +59,14 @@
                 </tr>
                 <tr>
                   <th>Điểm</th>
-                  <td><input class="form-control" type="number" th:field="*{customerPoint}"></td>
+                  <td th:text="${customer.customerPoint}"></td>
                 </tr>
                 <tr>
                   <td></td>
                   <td>
-                    <button type="submit" class="btn btn-primary">Submit</button>
+                    <a th:href="@{/customer/list}"><button type="button" class="btn btn-primary">Quay lại
+                    </button></a>
+                    <button type="submit" class="btn btn-primary">Chỉnh sửa</button>
                   </td>
                 </tr>
               </table>
