--- a/coffee_project/src/main/resources/templates/customer/list.html
+++ b/coffee_project/src/main/resources/templates/customer/list.html
@@ -8,6 +8,9 @@
           href="../static/bootstrap-5.0.2-dist/css/bootstrap.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css">
     <style>
+        body {
+            font-family: "Source Code Pro";
+        }
         #next {
             font-size: 1.5em;
             color: #333;
@@ -38,7 +41,7 @@
     <div class="row">
         <div th:replace="layout::content1"></div>
         <div class="col-sm-10" style="background-color: #FEFAE0;min-height: 700px">
-            <h1 style="text-align: center"><b>DANH SÁCH KHÁCH HÀNG</b></h1>
+            <h1 style="text-align: center"><b>Danh sách khách hàng</b></h1>
             <!--    Thanh công cụ-->
             <nav class="navbar navbar-inverse">
                 <div class="container-fluid">
@@ -138,7 +141,7 @@
                             Bạn có chắc chắn muốn xóa <strong id="nameDelete"></strong> ?</span>
                         </div>
                         <div class="modal-footer">
-                            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Không</button>
                             <a id="idDelete">
                                 <button type="button" class="btn btn-primary">Có</button>
                             </a>
@@ -146,8 +149,6 @@
                     </div>
                 </div>
             </div>
-            <!-- Form delete-->
-            <form action="" th:href="@{/customer/{id}/delete}" method="get"></form>
         </div>
     </div>
 </div>
