--- a/coffee_project/src/main/resources/templates/account/list-account.html
+++ b/coffee_project/src/main/resources/templates/account/list-account.html
@@ -7,16 +7,16 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css">
-<!--    <style th:fragment="style">-->
-<!--        * {-->
-<!--            font-style: italic;-->
-<!--        }-->
+    <!--    <style th:fragment="style">-->
+    <!--        * {-->
+    <!--            font-style: italic;-->
+    <!--        }-->
 
-<!--        .content-left:hover {-->
-<!--            background-color: #D4A373;-->
-<!--            border-radius: 10px;-->
-<!--        }-->
-<!--    </style>-->
+    <!--        .content-left:hover {-->
+    <!--            background-color: #D4A373;-->
+    <!--            border-radius: 10px;-->
+    <!--        }-->
+    <!--    </style>-->
     <link rel="stylesheet" th:href="@{/bootstrap-5.0.2-dist/css/bootstrap.css}"
           href="../static/bootstrap-5.0.2-dist/css/bootstrap.css">
 </head>
@@ -31,24 +31,35 @@
             <h1 style="text-align: center">Danh sách tài khoản</h1>
             <div class="row col-12">
                 <!--            <p style="color: green" th:if="${message!=null}" th:text="${message}" ></p>-->
-                <div class="col-1">
-                    <a th:href="@{/account/signup}">
-                        <button type="button" class="btn btn-primary">
-                            <i class="fa-solid fa-plus"></i></button>
-                    </a>
+                <div class="row col-3 d-flex">
+                    <form class="" id="signup" th:object="${accountDto}" th:action="@{/account/signup}"
+                          th:method="post">
+
+                        <div class="form-group mb-3">
+                            <input id="username" th:field="*{accountName}" type="text" class="form-control" required>
+                        </div>
+                        <div style="margin-left: 10px">
+                            <button type="button" class="btn btn-primary" data-bs-toggle="modal"
+                                    data-bs-target="#exampleModal" onclick="createNewAccount()">
+                                <i class="fa-solid fa-plus"></i></button>
+                        </div>
+                    </form>
                 </div>
-                <div class="col-4">
-<!--                    toast        -->
+                <div class="col-3">
+                    <!--                    toast        -->
                 </div>
-                <div class="col-7">
+                <div class="col-6">
                     <form th:action="@{/account/list}" th:method="get">
                         <label style="float: right">
-<!--                            <input class="form-control" style="display: inline-block" id="disabledTextInput" placeholder="Tìm kiếm" type="text" th:name="searchName" th:value="${searchName}">-->
-                            <input style="width: 400px;margin-right: 10px;display: inline-block" type="text" id="disabledTextInput" class="form-control"
+                            <!--                            <input class="form-control" style="display: inline-block" id="disabledTextInput" placeholder="Tìm kiếm" type="text" th:name="searchName" th:value="${searchName}">-->
+                            <input style="width: 400px;margin-right: 10px;display: inline-block" type="text"
+                                   id="disabledTextInput" class="form-control"
                                    th:name="search" placeholder="Nhập tên" th:value="${searchName}">
-                            <button style="display: inline-block;margin-bottom: 5px" class="btn btn-primary" type="submit"><i class="fas fa-search"></i></button>
+                            <button style="display: inline-block;margin-bottom: 5px" class="btn btn-primary"
+                                    type="submit"><i class="fas fa-search"></i></button>
                         </label>
                     </form>
+
                 </div>
 
             </div>
@@ -77,7 +88,8 @@
                     </td>
                     <td>
                         <!-- Button trigger modal -->
-                        <button type="button" class="btn btn-danger" data-bs-toggle="modal" data-bs-target="#exampleModal"
+                        <button type="button" class="btn btn-danger" data-bs-toggle="modal"
+                                data-bs-target="#exampleModal"
                                 th:attr="onclick=|confirm('${a.accountName}')|">
                             <i class="fa-regular fa-trash-can"></i>
                         </button>
@@ -87,11 +99,13 @@
             <div class="d-flex justify-content-center">
                 <a style="text-decoration: none" th:if="${accountPage.hasPrevious()}"
                    th:href="@{/account/list(page=${(accountPage.number)-1},searchName=${searchName})}">
-                    <button class="btn btn-primary">Prev</button></a>
+                    <button class="btn btn-primary">Prev</button>
+                </a>
                 <span th:text="${accountPage.number+1}"></span>/<span th:text="${accountPage.totalPages}"></span>
                 <a style="text-decoration: none" th:if="${accountPage.hasNext()}"
                    th:href="@{/account/list(page=${accountPage.number+1},searchName=${searchName})}">
-                    <button class="btn btn-primary">Next</button></a>
+                    <button class="btn btn-primary">Next</button>
+                </a>
             </div>
         </div>
     </div>
@@ -107,7 +121,7 @@
                 </div>
                 <div class="modal-body">
                     <input type="text" hidden="hidden" id="accountName">
-                    <span id="usernameDelete" name="usernameDelete"></span>
+                    <span id="usernameDelete" ></span>
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Huỷ</button>
@@ -118,12 +132,43 @@
         </div>
     </div>
 </div>
-<div th:replace="~{layout::footer}"></div>\
+<div class="modal fade" id="exampleModal1" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <form th:object="${accountDto}" th:action="@{/account/signup}" th:method="post">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="exampleModalLabel1">Bạn muốn xóa tài khoản :</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                        <input hidden="hidden" id="create" th:field="*{accountName}">
+                    <span id="accountName1"></span>
+
+
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Huỷ</button>
+                    <button type="submit" class="btn btn-primary">Xóa</button>
+                </div>
+            </form>
+
+        </div>
+    </div>
+</div>
+<div th:replace="~{layout::footer}"></div>
 <script>
-    function confirm(name){
-        document.getElementById("usernameDelete").innerText=name;
-        document.getElementById("accountName").value=name;
+    function confirm(name) {
+        document.getElementById("usernameDelete").innerText = name;
+        document.getElementById("accountName").value = name;
     }
+
+    function createNewAccount() {
+        let name = document.getElementById("username").value;
+        document.getElementById("accountName1").innerText = name;
+        document.getElementById("create").value = name;
+
+    }
+
 </script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
