--- a/coffee_project/src/main/resources/templates/login.html
+++ b/coffee_project/src/main/resources/templates/login.html
@@ -54,11 +54,11 @@
                               class="signin-form">
                             <div class="form-group mb-3">
                                 <label style="color: #6694a1"  for="username">Tên đăng nhập</label>
-                                <input id="username" th:field="*{username}" type="text" class="form-control" required>
+                                <input id="username" th:field="*{accountName}" type="text" class="form-control" required>
                             </div>
                             <div class="form-group mb-3">
                                 <label style="color: #6694a1" for="password">Mật khẩu</label>
-                                <input type="password" th:field="*{password}" id="password" class="form-control"
+                                <input type="password" th:field="*{accountPassword}" id="password" class="form-control"
                                        required>
                             </div>
                             <div class="form-group">
